agency-web/k8s/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: fullstack
  labels:
    app: api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: api
---
apiVersion: v1
kind: Service
metadata:
  name: api-nodeport
  namespace: fullstack
  labels:
    app: api
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30001
      protocol: TCP
      name: http
  selector:
    app: api
