agency-web/k8s/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: fullstack
  labels:
    app: frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: frontend
